Se hizo lo que más se pudo :(

--- a/prueba.html
+++ b/prueba.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href= "css/prueba.css">
-    <title>Document</title>
+    <link rel="icon" type="image/png" href="img/favicon.png"/>
+    <title>Coraje, el perro cobarde</title>
 </head>
 <body>
     <div class="container">
@@ -13,21 +14,22 @@
             <a href="prueba.html"><img src="img/logo 2.png"></a>
         </div>
         <div class="menu">
-            <div><a href="">Historia</a></div>
-            <div><a href="">Personajes</a></div>
-            <div><a href="">Villanos</a></div>
-            <div><a href="">Galería</a></div>
+            <div class="pri"><a href="">Historia</a></div>
+            <div class="seg"><a href="">Personajes</a></div>
+            <div class="ter"><a href="">Villanos</a></div>
+            <div class="cuar"><a href="">Galería</a></div>
 
         </div>
-
         <div class="img">
-            <img src="" alt="">
+            <img src="img/img-principal1.png" alt="">
         </div>
         <div class="info">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo natus ipsam dolores ea est pariatur ad quae, praesentium voluptatem consequuntur voluptatibus, minima ex placeat eligendi! Sequi accusamus sed nisi sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, totam necessitatibus debitis maxime nesciunt id, sed esse eos non cum maiores labore quod dignissimos alias unde aspernatur praesentium vitae soluta. lore</p>
+            <div>
+                <p>La gracia de Coraje, un perro rosado que siempre estaba al borde del colapso nervioso, radicaba en que su propuesta era una mezcla de terror y profundas reflexiones que se escabullían bajo monstruos de apariencia temible</p>
+            </div>
         </div>
         <div class="img2">
-            <img src="">
+            <img src="img/img-principal3.png">
         </div>
         <div class="footer">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis pariatur assumenda animi tempore sunt ipsam similique et reprehenderit rem. Officia nostrum sit nesciunt dicta accusantium dolor perferendis nulla illum natus?</p>
