--- a/lol.html
+++ b/lol.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href= "css/lol.css">
-    <title>prueba</title>
+    <link rel="icon" type="image/png" href="img/favicon.png"/>
+    <title>Coraje, el perro cobarde</title>
 </head>
 <body>
     <body>
@@ -16,26 +17,26 @@
     
         <div class="container">
             <header class="header">
-                <img src="img/logo 2.png">
+                <a href="lol.html"><img src="img/logo 2.png"></a>
                 <aside class="sidebar">
-                    <div>
+                    <div class="historia">
                         <ul>
-                            <li>Historia</li>
+                            <a href="#"><li>Historia</li></a>
                         </ul>
                     </div>
-                    <div>
+                    <div class="personajes">
                         <ul>
-                            <li>Historia</li>
+                            <a href="#"><li>Personajes</li></a>
                         </ul>
                     </div>
-                    <div>
+                    <div class="villanos">
                         <ul>
-                            <li>Historia</li>
+                            <a href="#"><li>Villanos</li></a>
                         </ul>
                     </div>
-                    <div>
+                    <div class="galeria">
                         <ul>
-                            <li>Historia</li>
+                            <a href="#"><li>Galeria</li></a>
                         </ul>
                     </div>
                 </aside>
