Se terminan de hacer botones de sidebar

--- a/lol.html
+++ b/lol.html
@@ -19,23 +19,23 @@
             <header class="header">
                 <a href="lol.html"><img src="img/logo 2.png"></a>
                 <aside class="sidebar">
-                    <div class="historia">
-                        <ul>
+                    <div >
+                        <ul class="historia">
                             <a href="#"><li>Historia</li></a>
                         </ul>
                     </div>
-                    <div class="personajes">
-                        <ul>
+                    <div >
+                        <ul class="personajes">
                             <a href="#"><li>Personajes</li></a>
                         </ul>
                     </div>
-                    <div class="villanos">
-                        <ul>
+                    <div >
+                        <ul class="villanos">
                             <a href="#"><li>Villanos</li></a>
                         </ul>
                     </div>
-                    <div class="galeria">
-                        <ul>
+                    <div >
+                        <ul class="galeria">
                             <a href="#"><li>Galeria</li></a>
                         </ul>
                     </div>
