Se termina de hacer casi todas las interfaces

--- a/personajes.html
+++ b/personajes.html
@@ -5,9 +5,120 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="img/favicon.png"/>
+        <link rel="stylesheet" type="text/css" href= "css/personajes.css">
     <title>Personajes</title>
 </head>
 <body>
-    
+    <header class="title">
+        <h1>Coraje, el perro Cobarde</h1>
+    </header>
+
+    <div class="container">
+        <header class="header">
+            <a href="index.html"><img src="img/logo 2.png"></a>
+            <aside class="sidebar">
+                <div >
+                    <ul class="historia">
+                        <a href="index.html"><li>Historia</li></a>
+                    </ul>
+                </div>
+                <div >
+                    <ul class="personajes">
+                        <a href="personajes.html"><li>Personajes</li></a>
+                    </ul>
+                </div>
+                <div >
+                    <ul class="villanos">
+                        <a href="villanos.html"><li>Villanos</li></a>
+                    </ul>
+                </div>
+                <div >
+                    <ul class="galeria">
+                        <a href="galeria.html"><li>Galeria</li></a>
+                    </ul>
+                </div>
+            </aside>
+        </header>
+        <main class="content">
+            <article class="article">
+                <div class="related-post">       
+                    <h1>Coraje</h1>             
+                    <img src="img/coraje.png">
+                </div>
+            </article>
+
+            <article class="article">
+                <div class="related-post">             
+                    <h1>Muriel</h1>
+                    <img src="img/muriel.png">
+                </div>
+            </article>
+            <article class="article">
+                <div class="related-post">     
+                    <h1>Justo</h1>
+                    <img src="img/justo.png"> 
+               </div>
+            </article>
+            <article class="article">
+                <div class="related-post">          
+                    <h1>Justo</h1>
+                    <img src="img/compu1.png"> 
+                 </div>
+            </article>
+            <article class="article">
+                <div class="related-post">     
+                      <h1>Justo</h1>
+                    <img src="img/mama.png"> 
+                 </div>
+            </article>
+            <article class="article">
+                <div class="related-post">         
+                     <h1>Justo</h1>
+                    <img src="img/jorobado.png"> 
+                 </div>
+            </article>
+            <article class="article">
+                <div class="related-post">   
+                    <h1>Justo</h1>
+                    <img src="img/elzorro1.png"> 
+                 </div>
+            </article>
+            <article class="article">
+                <div class="related-post">   
+                     <h1>Justo</h1>
+                    <img src="img/la-reina.png"> 
+                 </div>
+            </article>
+            <article class="article">
+                <div class="related-post">   
+                     <h1>Justo</h1>
+                    <img src="img/dotot2.png"> 
+                 </div>
+            </article>
+            <article class="article">
+                <div class="related-post">   
+                     <h1>Justo</h1>
+                    <img src="img/x.png"> 
+                 </div>
+            </article>
+            <article class="article">
+                <div class="related-post">   
+                     <h1>Justo</h1>
+                    <img src="img/freddy.png"> 
+                 </div>
+            </article>
+            <article class="article">
+                <div class="related-post">   
+                     <h1>Justo</h1>
+                    <img src="img/shirley.png"> 
+                 </div>
+            </article>
+        </main>
+        <footer class="footer">
+            <h4>footer</h4>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non, necessitatibus.</p>
+        </footer>
+
+    </div>
 </body>
 </html>
