--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href= "css/lol.css">
+    <link rel="stylesheet" type="text/css" href= "css/index.css">
     <link rel="icon" type="image/png" href="img/favicon.png"/>
     <title>Coraje, el perro cobarde</title>
 </head>
@@ -80,7 +80,6 @@
             </div>
             <div class="related-post">                
                 <img src="img/coraje.png">
-      
             </div>
             <div class="related-post">
                  <img src="img/justo.png"> 
