--- a/villanos.html
+++ b/villanos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="img/favicon.png"/>
-        <link rel="stylesheet" type="text/css" href= "css/personajes.css">
+        <link rel="stylesheet" type="text/css" href= "css/villanos.css">
     <title>Villanos</title>
 </head>
 <body>
