Se termina galeria y queda responsive casi todo :')

--- a/galeria.html
+++ b/galeria.html
@@ -40,7 +40,26 @@
             </aside>
         </header>
         <main class="content">
-            
+            <div class='gallery'>
+                <h1>Galeria</h1>
+                 <div class='card'>
+                  <div class='gallery-carousel'>
+                     <img src="img/carrusel1.jpg" alt="Girl in a jacket" > 
+                    <img src="img/carrusel2.jpg" alt="Girl in a jacket" > 
+                    <img src="img/carrusel3.webp" alt="Girl in a jacket" > 
+                    <img src="img/carrusel4.webp" alt="Girl in a jacket" > 
+                  </div>
+              </div>
+              <div class='card'>
+                <div class='gallery-carousel'>
+                   <img src="img/ju.jpg" alt="Girl in a jacket" > 
+                  <img src="img/96e43d9785cfeac29db4d8cf9865afa4.jpg" alt="Girl in a jacket" > 
+                  <img src="img/ad28de228827de20951800e7585a25c4.jpg" alt="Girl in a jacket" > 
+                  <img src="img/img-principal2.png" alt="Girl in a jacket" > 
+                  <img src="img/murielyjusto.jpg" alt="Girl in a jacket" > 
+                </div>
+            </div>
+            </div>
         </main>
         <footer class="footer">
             <h4>footer</h4>
