Se agregan interfaces incompletas de personajes

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             </header>
             <main class="content">
                 <article class="article">
+                    <h1>Coraje, el perro Cobarde</h1>>
                     <h1>Title</h1>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est corrupti repudiandae quo amet magnam
                         mollitia necessitatibus incidunt veritatis officia veniam aperiam, sunt cumque sequi? Perferendis
