--- a/personajes.html
+++ b/personajes.html
@@ -9,9 +9,6 @@
     <title>Personajes</title>
 </head>
 <body>
-    <header class="title">
-        <h1>Coraje, el perro Cobarde</h1>
-    </header>
 
     <div class="container">
         <header class="header">
@@ -43,74 +40,74 @@
             <article class="article">
                 <div class="related-post">       
                     <h1>Coraje</h1>             
-                    <img src="img/coraje.png">
+                    <a href="coraje.html"><img src="img/coraje.png"></a>
                 </div>
             </article>
 
             <article class="article">
                 <div class="related-post">             
                     <h1>Muriel</h1>
-                    <img src="img/muriel.png">
+                    <a href="muriel.html"><img src="img/muriel.png"></a>
                 </div>
             </article>
             <article class="article">
                 <div class="related-post">     
                     <h1>Justo</h1>
-                    <img src="img/justo.png"> 
+                    <a href="justo.html"><img src="img/justo.png"> </a>
                </div>
             </article>
             <article class="article">
                 <div class="related-post">          
-                    <h1>Justo</h1>
-                    <img src="img/compu1.png"> 
+                    <h1>Computadora</h1>
+                    <a href="computadora.html"><img src="img/compu1.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">     
-                      <h1>Justo</h1>
-                    <img src="img/mama.png"> 
+                      <h1>La mamá de Justo</h1>
+                    <a href="mamajusto.html"><img src="img/mama.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">         
-                     <h1>Justo</h1>
-                    <img src="img/jorobado.png"> 
+                     <h1>El Jorobado</h1>
+                    <a href="jorobado.html"><img src="img/jorobado.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
-                    <h1>Justo</h1>
-                    <img src="img/elzorro1.png"> 
+                    <h1>Zorro Cajún</h1>
+                    <a href="elzorro.html"><img src="img/elzorro1.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
-                     <h1>Justo</h1>
-                    <img src="img/la-reina.png"> 
+                     <h1>La reina del charco</h1>
+                    <a href="reina.html"><img src="img/la-reina.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
-                     <h1>Justo</h1>
-                    <img src="img/dotot2.png"> 
+                     <h1>Doctor Zalost</h1>
+                    <a href="doctorz.html"><img src="img/dotot2.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
-                     <h1>Justo</h1>
-                    <img src="img/x.png"> 
+                     <h1>Le Quack</h1>
+                    <a href="lecuack.html"><img src="img/x.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
-                     <h1>Justo</h1>
-                    <img src="img/freddy.png"> 
+                     <h1>El Espeluznante Fred</h1>
+                    <a href="fredy.html"><img src="img/freddy.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
-                     <h1>Justo</h1>
-                    <img src="img/shirley.png"> 
+                     <h1>Shirley</h1>
+                    <a href="shirley.html"><img src="img/shirley.png"> </a>
                  </div>
             </article>
         </main>
