--- a/villanos.html
+++ b/villanos.html
@@ -9,10 +9,6 @@
     <title>Villanos</title>
 </head>
 <body>
-    <header class="title">
-        <h1>Coraje, el perro Cobarde</h1>
-    </header>
-
     <div class="container">
         <header class="header">
             <a href="index.html"><img src="img/logo 2.png"></a>
@@ -39,43 +35,80 @@
                 </div>
             </aside>
         </header>
-        <main class="content">
+        <main class="content">            
             <article class="article">
                 <div class="related-post">   
-                    <h1>Justo</h1>
+                     <h1>Cabezas de Carne</h1>
+                    <img src="img/cabezas.png"> 
+                 </div>
+            </article>
+            <article class="article">
+                <div class="related-post">   
+                     <h1>La Sombra</h1>
+                    <img src="img/sombra.png"> 
+                 </div>
+            </article>
+            <article class="article">
+                <div class="related-post">   
+                     <h1>Ramses</h1>
+                    <img src="img/ramses.png"> 
+                 </div>
+            </article>
+            <article class="article">
+                <div class="related-post">   
+                     <h1>Dcotor Gerbil</h1>
+                    <img src="img/drgerbil.png"> 
+                 </div>
+            </article>
+            <article class="article">
+                <div class="related-post">   
+                     <h1>Fusili</h1>
+                    <img src="img/fusili.png"> 
+                 </div>
+            </article>
+            <article class="article">
+                <div class="related-post">   
+                     <h1>El extraterrestre</h1>
+                    <img src="img/elextraterrestre1.png"> 
+                 </div>
+            </article>
+            <article class="article">
+                <div class="related-post">   
+                    <h1>Zorro Cajún</h1>
                     <img src="img/elzorro1.png"> 
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
-                     <h1>Justo</h1>
+                     <h1>La reina del charco</h1>
                     <img src="img/la-reina.png"> 
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
-                     <h1>Justo</h1>
+                     <h1>Doctor Zalost</h1>
                     <img src="img/dotot2.png"> 
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
-                     <h1>Justo</h1>
+                     <h1>Le Quack</h1>
                     <img src="img/x.png"> 
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
-                     <h1>Justo</h1>
+                     <h1>El Espeluznante Fred</h1>
                     <img src="img/freddy.png"> 
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
-                     <h1>Justo</h1>
+                     <h1>Shirley</h1>
                     <img src="img/shirley.png"> 
                  </div>
             </article>
+
         </main>
         <footer class="footer">
             <h4>footer</h4>
